# AfterBloom

./: .gitignore  CMakeLists.txt  README.md  build_android.bat  build_android.sh
android/: gradle.properties
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/java/com/raylib/raymob/: DisplayManager.java
cmake/: buildinfo.cmake
src/: main.cpp
src/game/areas/: event1.cpp  event1.hpp  prologue.cpp  prologue.hpp  stage0.cpp  stage0.hpp  stage1.cpp  stage1.hpp
src/game/core/: buildinfo.cpp  buildinfo.hpp  gamecore.hpp  globals.cpp  globals.hpp  settings.cpp  settings.hpp  ui_style.hpp
src/game/entities/: interactable.cpp  interactable.hpp  npc.cpp  npc.hpp  slime_enemy.cpp  slime_enemy.hpp
src/game/states/: android_controls.hpp  pause_action.hpp  pause_menu.cpp  pause_menu.hpp  shared_mechanics.cpp  shared_mechanics.hpp  title_state.cpp  title_state.hpp
